# tcc

./: .gitignore  .prettierrc.yaml  README.md  _quarto.yaml  env.yml  flake.nix  pixi.toml  project.qmd  pyproject.toml  ruff.toml  slides.qmd  thesis.qmd
output/: slides.html
quarto/preamble/: cover.qmd  signatures.qmd
quarto/tex/: packages.tex  planning.tex  settings.tex
resources/: commands.tex  settings.tex
resources/references/: references.bib
resources/tex/: packages.tex
resources/thesis/: catalographic_index.qmd
resources/thesis_sections/: cover.qmd
