[project]
name = "thesis"
version = "1.0.0"
requires-python = ">=3.13"
description = "My economics bachelor's thesis (UFABC)"
dependencies = [
    "httpx>=0.28.0",
    "keras>=3.7.0",
    "mapie>=0.9.1",
    "matplotlib>=3.9.3",
    "pandas>=2.2.3",
    "scikit-learn>=1.5.2",
    "statsmodels>=0.14.4",
]

[tool.basedpyright]
typeCheckingMode = "standard"
useLibraryCodeForTypes = true
reportAttributeAccessIssue = false
venvPath = "."
venv = ".venv"

[tool.ruff]
target-version = "py313"
line-length = 120
indent-width = 4

[tool.ruff.lint]
select = [
  "A",
  "ARG",
  "ASYNC",
  "B",
  "C4",
  "DTZ",
  "E",
  "F",
  "I",
  "N",
  "PL",
  "PT",
  "PTH",
  "RUF",
  "W",
]
fixable = ["ALL"]

[tool.ruff.format]
quote-style = "double"
